assets/css/curio.css
* {
  margin: 0;
  padding: 0;
}

html,
body {
  min-height: 100%;
}

html {
  height: auto;
}

body {
  font: 62.5% Verdana;
  text-align: center;
}

body.activated .currency {
  background: #ffe9d5;
}

.header {
  margin-top: 10%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.header span {
  margin: 1em 0;
  font-size: 1.625em;
}

.price {
  color: #f7871f;
  font-size: 2em;
  letter-spacing: 0.05em;
  word-spacing: -0.3em;
  margin: 0.7em 0.9em 0.5em 0.9em;
}

.price .small-text {
  display: none;
}

.price .clearfix {
  clear: both;
  height: 0;
}

.currency {
  color: #d8d8d8;
  font-size: 3em;
  margin: 0 0.1em;
  padding: 0 0.07em 0.03em;
  float: left;
  clear: left;
  font-size: 1.4em;
}

.currency:first-child {
  margin-bottom: 0.3em;
  margin-top: 0.3em;
}

.currency .symbol {
  display: inline-block;
  text-align: left;
  width: 2.1em;
}

.currency input {
  min-width: 3.9em;
  max-width: 3.9em;
  color: #c8c8c8;
  outline: 0;
}

input#curio,
input#hilux {
  border: 0;
  color: #909090;
  font-family: verdana;
  font-size: 1em;
  margin-left: 0.1em;
  text-align: right;
  width: 2.3em;
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  -o-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.footer {
  position: absolute;
  bottom: 0;
  right: 0;
  padding: 2em;
}

.footer a,
.footer a:visited,
.footer a:focus,
.footer a:active {
  color: #000;
}

.footer a:hover {
  color: #000;
}

/*************************************************************
 * Media Queries
 ************************************************************/

@media (min-width: 239px) {
  .currency input {
    min-width: 4.6em;
    max-width: 4.6em;
  }
}

@media (min-width: 299px) {
  .currency {
    font-size: 1.8em;
  }

  .currency input {
    min-width: 4.7em;
    max-width: 4.7em;
  }
}

@media (min-width: 319px) {
  .currency input {
    min-width: 5.3em;
    max-width: 5.3em;
  }
}

@media (min-width: 359px) {
  .currency {
    font-size: 2em;
  }

  .currency input {
    min-width: 5.5em;
    max-width: 5.5em;
  }
}

@media (min-width: 641px) {
  .currency {
    color: #d8d8d8;
    float: none;
    clear: none;
    font-size: 3em;
  }

  .currency input,
  .currency input#curio {
    min-width: 0;
    max-width: none;
  }

  .currency .symbol {
    width: auto;
  }

  .currency:first-child {
    margin: 0 0.1em;
  }

  .currency,
  input#curio,
  input#hilux {
    background: transparent;
  }

  .price {
    font-size: 1.2em;
    margin-top: 4%;
  }

  .price .small-text {
    display: inline;
  }
}

@media (min-width: 780px) {
  .price {
    font-size: 1.4em;
  }
}

@media (min-width: 880px) {
  .price {
    font-size: 1.6em;
  }
}

@media (min-width: 1020px) {
  .price {
    font-size: 2em;
  }
}

